--- a/IdeapadToolkit/App.xaml
+++ b/IdeapadToolkit/App.xaml
@@ -9,7 +9,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ui:ThemeResources AccentColor="#E60012" RequestedTheme="Dark" />
+                <ui:ThemeResources AccentColor="#3E8DDD" RequestedTheme="Dark" />
                 <ui:ThemeResources />
                 <ui:XamlControlsResources />
             </ResourceDictionary.MergedDictionaries>
