--- a/IdeapadToolkit/MainWindow.xaml
+++ b/IdeapadToolkit/MainWindow.xaml
@@ -9,7 +9,7 @@
     xmlns:ui="http://schemas.modernwpf.com/2019"
     xmlns:views="clr-namespace:IdeapadToolkit.Views"
     x:Name="_mainwindow"
-    Title="Ideapad Toolkit"
+    Title="Lenovo Toolkit"
     Width="400"
     Height="450"
     MinWidth="400"
@@ -49,7 +49,7 @@
                     FontWeight="Bold"
                     Foreground="White"
                     Style="{DynamicResource BodyTextBlockStyle}"
-                    Text="Ideapad Toolkit" />
+                    Text="Lenovo Toolkit" />
             </Grid>
 
             <mwpf:NavigationView
