--- a/IdeapadToolkit/Views/TrayIconView.xaml
+++ b/IdeapadToolkit/Views/TrayIconView.xaml
@@ -17,7 +17,7 @@
         <tb:TaskbarIcon
             x:Name="TrayIcon"
             IconSource="\Resources\icon.ico"
-            ToolTipText="Ideapad Toolkit"
+            ToolTipText="Lenovo Toolkit"
             TrayMouseDoubleClick="TrayIcon_TrayMouseDoubleClick"
             Visibility="Collapsed">
             <FrameworkElement.ContextMenu>
